Modified dockerfile for the Microservice

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install --no-cache-dir requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 8000
-CMD ["app","python"]
+CMD ["python","app.py"]
