--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -1,18 +1,42 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Cost-Control-Platform
+  name: cost-control-platform
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: Cost-Control-Platform
+      app: cost-control-platform
   template:
     metadata:
       labels:
-        app: Cost-Control-platform
+        app: cost-control-platform
     spec:
       containers:
-      - name: Cost-Control-Platform
+      - name: cost-control-platform
         image: sheershsinha/metrics-microservice:v1
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
+
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
+
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8000
+          initialDelaySeconds: 15
+          periodSeconds: 10
+
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 5
